Some new text and figures to more clearly explain the free energies.

--- a/Practical Phase Field With Examples.ipynb
+++ b/Practical Phase Field With Examples.ipynb
@@ -262,7 +262,7 @@
     " * Pure A, liquid phase - $f_A^L(T)$\n",
     " * Pure A, solid phase - $f_A^S(T)$\n",
     "\n",
-    "As we will be limiting ourselves to a pure material at this time, these are the only two free energies we need.  Near the melting point these free energies are often modeled as straight lines using the relationship for the Gibbs free energy:\n",
+    "The superscripts refer to the free energy and the subscripts refer to the species.  As we will be limiting ourselves to a pure material at this time, these are the only two free energies we need.  Near the melting point these free energies are often modeled as straight lines using the relationship for the Gibbs free energy:\n",
     "\n",
     "$$G = H - TS$$"
    ]
@@ -294,7 +294,7 @@
    "source": [
     "The next step is to homogenize the free energy for component A.  We build the free energy $f(\\phi,T)_A$ as follows:\n",
     "\n",
-    "$$f(\\phi,T)_A = W_A~g(\\phi) + f_L p(\\phi) + f_S (1-p(\\phi))$$"
+    "$$f(\\phi,T)_A = W_A~g(\\phi) + f_A^L(T) p(\\phi) + f_A^S(T) (1-p(\\phi))$$"
    ]
   },
   {
@@ -363,6 +363,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -371,6 +372,53 @@
    "source": [
     "plot_homogeneous_F()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "If the notebook is working properly you should see a three dimensional representation of the free energy function $f(\\phi,T)_A$.  There are two important views.\n",
+    "\n",
+    "In this view we can see that the edges of our surface at $\\phi=0$ and $\\phi=1$ show the trace of the Gibbs free energy in the vicinity of the melting temperature.  The consequence of our linear free energy assumption is apparent and we can see that the two free energies are equal at the melting temperature.  Our intution tells us that the Gibbs free energy of the most stable phase should be lowest in a pure material.  At temperatures lower than the melting point, $G_S$ is the lowest energy and the reverse is true at temperatures higher than the melting point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "The projection of the homogeneous free energy in the $T,G$ plane.  \n",
+    "\n",
+    "![g-vs-t](t-vs-g.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second view is in the $T,\\phi$ plane.  In this view we can see the effect of changing temperature on the equilibrium between the solid and liquid phases.  At all temperatures, the free energy is continuous in the order parameter and is highest when the system is at intermediate states.  At equilibrium, the bulk free energy of the solid and liquid is equal with an energy barrier between them.  Later, we will see that this energy barrier is related to the excess Gibbs free energy due to the presence of an interface.  The parameters in the phase field model scale the height of this barrier and permit us to control the interfacial thickness and the surface energy in our model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The projection of the homogeneous free energy in the $T,\\phi$ plane.  \n",
+    "\n",
+    "![t-vs-phi](t-vs-phi.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
